--- a/Etymology .html
+++ b/Etymology .html
@@ -15,8 +15,8 @@
 
     </ol>
     <ul>
-        <li>Radheya = son of Radha (Karna's adopted mother).</li>
-        <li>Sutaputra =  son of charioteer.</li>
+        <li><strong>>Radheya</strong>= son of Radha (Karna's adopted mother).</li>
+        <li><strong>Sutaputra </strong>=  son of charioteer.</li>
     </ul>
 
 </body>
